<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item android:id="@+id/nav_portafolio" android:title="@string/portafolio"         android:icon="@drawable/portafolio"/>
    <item android:id="@+id/nav_registro" android:title="@string/registrar"    android:icon="@drawable/registrate"/>
    <item android:id="@+id/nav_eventos" android:title="@string/eventos"              android:icon="@drawable/eventos"/>
    <item android:id="@+id/nav_promociones" android:title="@string/promociones" android:icon="@drawable/promociones"/>
    <item android:id="@+id/nav_escribeme" android:title="@string/escribeme"            android:icon="@drawable/escribeme"/>


    <item android:title="@string/perfil">
        <menu>
            <item android:id="@+id/nav_logout"  android:title = "@string/cerrar_sesion"/>
        </menu>
    </item>

</menu>